Add event listener to search input

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
 
     <section id="map">
-      <h1>Hello World</h1>
+      <h1>This will be a map</h1>
     </section>
 
     <script src="scripts/index.js"></script>
