Initialize Mapbox GL Map object

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Chingu Mapbox API Solo Project</title>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.js"></script>
+    <link
+      href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav id="nav">
       <input id="search" />
     </nav>
 
-    <section id="map">
-      <h1>This will be a map</h1>
-    </section>
+    <section id="map"></section>
 
     <script src="scripts/index.js"></script>
   </body>
