--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>Chingu Mapbox API Solo Project</title>
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.js"></script>
+    <script src="https://kit.fontawesome.com/56db6b190b.js"></script>
     <link
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav id="nav">
-      <input id="search" />
-    </nav>
+    <main id="parent">
+      <div id="menuButton"><i class="fas fa-bars"></i></div>
+      <nav id="nav">
+        <input id="search" />
+      </nav>
 
-    <section id="map"></section>
+      <section id="map"></section>
+    </main>
 
     <script src="scripts/index.js"></script>
   </body>
